86 - Raycast Query Click (Click to work)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -157,6 +157,9 @@
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\Suspension.cs" />
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\WheelEffects.cs" />
      <Compile Include="Assets\Scripts\CameraFollow2.cs" />
+     <Compile Include="Assets\Scripts\CameraRaycaster.cs" />
+     <Compile Include="Assets\Scripts\Cursorx.cs" />
+     <Compile Include="Assets\Scripts\Utilities.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\CameraControls.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\IcoBumpin.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Misc\HueCube.cs" />
