--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -159,6 +159,7 @@
      <Compile Include="Assets\Scripts\CameraFollow2.cs" />
      <Compile Include="Assets\Scripts\CameraRaycaster.cs" />
      <Compile Include="Assets\Scripts\Cursorx.cs" />
+     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Utilities.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\CameraControls.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\IcoBumpin.cs" />
