--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -156,10 +156,13 @@
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\SkidTrail.cs" />
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\Suspension.cs" />
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\WheelEffects.cs" />
-     <Compile Include="Assets\Camera &amp; UI\PlayerHealthBar.cs" />
      <Compile Include="Assets\Scripts\CameraFollow2.cs" />
      <Compile Include="Assets\Scripts\CameraRaycaster.cs" />
      <Compile Include="Assets\Scripts\CursorAffordance.cs" />
+     <Compile Include="Assets\Scripts\EnemyHealthBar.cs" />
+     <Compile Include="Assets\Scripts\EnemyUI.cs" />
+     <Compile Include="Assets\Scripts\EnemyX.cs" />
+     <Compile Include="Assets\Scripts\PlayerHealthBar.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerX.cs" />
      <Compile Include="Assets\Scripts\Utilities.cs" />
