121 - Help Write Physics Code
Added Windmill working and script

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -165,6 +165,7 @@
      <Compile Include="Assets\Scripts\PlayerHealthBar.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerX.cs" />
+     <Compile Include="Assets\Scripts\SpinMe.cs" />
      <Compile Include="Assets\Scripts\Utilities.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\CameraControls.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\IcoBumpin.cs" />
