--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -184,20 +184,20 @@
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\SkidTrail.cs" />
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\Suspension.cs" />
      <Compile Include="Assets\Asset Packs\Standard Assets\Vehicles\Car\Scripts\WheelEffects.cs" />
-     <Compile Include="Assets\Scripts\CameraFollow2.cs" />
-     <Compile Include="Assets\Scripts\CameraRaycaster.cs" />
-     <Compile Include="Assets\Scripts\CursorAffordance.cs" />
-     <Compile Include="Assets\Scripts\DominantHand.cs" />
-     <Compile Include="Assets\Scripts\EnemyHealthBar.cs" />
-     <Compile Include="Assets\Scripts\EnemyUI.cs" />
-     <Compile Include="Assets\Scripts\EnemyX.cs" />
-     <Compile Include="Assets\Scripts\IDamagable.cs" />
-     <Compile Include="Assets\Scripts\PlayerHealthBar.cs" />
-     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
-     <Compile Include="Assets\Scripts\PlayerX.cs" />
-     <Compile Include="Assets\Scripts\Projectile.cs" />
-     <Compile Include="Assets\Scripts\SpinMe.cs" />
-     <Compile Include="Assets\Scripts\Weapon.cs" />
+     <Compile Include="Assets\Scripts\CameraUI\CameraFollow2.cs" />
+     <Compile Include="Assets\Scripts\CameraUI\CameraRaycaster.cs" />
+     <Compile Include="Assets\Scripts\CameraUI\CursorAffordance.cs" />
+     <Compile Include="Assets\Scripts\Characters\DominantHand.cs" />
+     <Compile Include="Assets\Scripts\Characters\EnemyHealthBar.cs" />
+     <Compile Include="Assets\Scripts\Characters\EnemyUI.cs" />
+     <Compile Include="Assets\Scripts\Characters\EnemyX.cs" />
+     <Compile Include="Assets\Scripts\Characters\PlayerHealthBar.cs" />
+     <Compile Include="Assets\Scripts\Characters\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Characters\PlayerX.cs" />
+     <Compile Include="Assets\Scripts\Core\IDamagable.cs" />
+     <Compile Include="Assets\Scripts\Core\SpinMe.cs" />
+     <Compile Include="Assets\Scripts\Weapons\Projectile.cs" />
+     <Compile Include="Assets\Scripts\Weapons\Weapon.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\CameraControls.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Icosphere FFT\Scripts\IcoBumpin.cs" />
      <Compile Include="Assets\Tools\ProBuilder\API Examples\Misc\HueCube.cs" />
